<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/My_Main_Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="24dp">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginEnd="12dp"
                android:layout_weight="1"
                android:background="@color/primary"
                android:elevation="2dp"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/Total_Amount_in_RS"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/amountRS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:inputType="number"
                    android:text="0"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/primary"
                android:elevation="2dp"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginBottom="8dp"
                    android:text="@string/Total_Amount_in_USD"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/amountUSD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="0"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>

        <!-- Input Prompt -->
        <TextView
            android:id="@+id/textPrompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/Please_enter_your_amount"
            android:textSize="16sp" />

        <!-- Input Row (Spinner + EditText + Spinner) -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinnerType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <EditText
                android:id="@+id/editAmount"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:hint="0.00"
                android:inputType="numberDecimal"
                android:padding="8dp" />

            <Spinner
                android:id="@+id/spinnerCurrencyType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp" />

        </LinearLayout>




        <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            android:headerBackground="@color/primary"
            android:keepScreenOn="false"
            android:keyboardNavigationCluster="false"
            android:spinnersShown="true" />

        <TextView
            android:id="@+id/textNotePrompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/Enter_a_note" />

        <EditText
            android:id="@+id/editNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:accessibilityTraversalAfter="@id/btnSave"
            android:accessibilityTraversalBefore="@id/datePicker"
            android:hint="@string/Write_something_here"
            android:inputType="textMultiLine"
            android:maxLines="5"
            android:minLines="2" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary"
            android:onClick="btnClick"
            android:padding="12dp"
            android:text="@string/Save"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

    </LinearLayout>
</ScrollView>
